# sprue-api/src/server.rs
@@ -13,8 +13,9 @@ use crate::{
         oidc::{prove_oidc_token_request, register_oidc_token_request},
         service::{
             accept_server, checkin_server, create_deployment, create_service, delete_deployment,
-            get_deployment, get_service, get_service_servers, list_deployments, list_services,
-            prove_server, register_blob, register_server, reject_server, terminate_server,
+            delete_server, get_deployment, get_service, get_service_servers, list_deployments,
+            list_services, prove_server, register_blob, register_server, reject_server,
+            terminate_server,
         },
     },
     permissions::ApiPermissions,
@@ -63,6 +64,9 @@ pub fn describe() -> ApiDescription<ApiContext> {
         .expect("Register endpoint");
     description
         .register(reject_server)
+        .expect("Register endpoint");
+    description
+        .register(delete_server)
         .expect("Register endpoint");
     description
         .register(terminate_server)
